adds markup elements to newsroom-detail.html. adds quick search box width refinement in newsroom-nav.scss

--- a/development/terminalfour/src/html/newsroom-detail.html
+++ b/development/terminalfour/src/html/newsroom-detail.html
@@ -18,13 +18,10 @@
         @@include('newsroomHomepageIncludes/newsroomNav.html')
 
         <!-- newsroom includes go here -->
-        <!-- @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
-        @@include('newsroomHomepageIncludes/newsroomArticles.html') -->
-
-        <h2>Hello I'm the newsroom-detail page!</h2>
+        <!-- @@include('newsroomHomepageIncludes/newsroomHomepageHero.html') -->
+        <!-- @@include('newsroomHomepageIncludes/newsroomArticles.html') -->
 
         <!-- footer includes -->
-
         @@include('newsroomHomepageIncludes/newsroomFooter.html')
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
