--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -81,8 +81,8 @@
 			</div>
 		</div>
 	</div>
-</div>
-        <div class="container-fluid article-container">
+</div> -->
+        <!-- <div class="container-fluid article-container">
 	<div class="row">
 		<div class="col-md-12 text-center">
 			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
@@ -130,10 +130,7 @@
 	</div>
 </div> -->
 
-        <h2>Hello I'm the newsroom-detail page!</h2>
-
         <!-- footer includes -->
-
         <footer>
 	<div class="footer-body">
 		<div class="container-fluid">
