comments out newsroomHomepageHero.html import in newsroom-detail.html file

--- a/development/terminalfour/src/html/newsroom-detail.html
+++ b/development/terminalfour/src/html/newsroom-detail.html
@@ -18,7 +18,7 @@
         @@include('newsroomHomepageIncludes/newsroomNav.html')
 
         <!-- newsroom includes go here -->
-        <!-- @@include('newsroomHomepageIncludes/newsroomHomepageHero.html') -->
+        @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
         <!-- @@include('newsroomHomepageIncludes/newsroomArticles.html') -->
 
         <!-- footer includes -->
