adds additional markup to the article detail page. creates new style file newsroom-detail.scss. adds the import for newsroom-detail.scss in newsroom-style.scss. adds compiled files.

--- a/development/terminalfour/src/html/newsroom-detail.html
+++ b/development/terminalfour/src/html/newsroom-detail.html
@@ -19,7 +19,8 @@
 
         <!-- newsroom includes go here -->
         @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
-        <!-- @@include('newsroomHomepageIncludes/newsroomArticles.html') -->
+        @@include('newsroomHomepageIncludes/newsroomArticleDetail.html')
+
 
         <!-- footer includes -->
         @@include('newsroomHomepageIncludes/newsroomFooter.html')
