--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -82,53 +82,21 @@
 		</div>
 	</div>
 </div>
-        <!-- <div class="container-fluid article-container">
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+        <section class="newsroom-article-detail">	
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-8">
+				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
+				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium officiis ut sapiente reprehenderit enim soluta corrupti sint placeat. Odit voluptatibus dicta officia, dolores sed tempore sequi minus mollitia suscipit quisquam.</p>
+				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
-				<img src="http://via.placeholder.com/580x450" alt="Article Image">
-				<h4>Category</h4>
-				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
-				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			<div class="col-md-4">
+				<h3 style="background-color: orange;">I am the side bar</h3>
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 article-cta center-block text-center">
-			<button class="btn btn-lg btn-default">Read More Stories</button>
-		</div>
-	</div>
-</div> -->
+</section>
+
 
         <!-- footer includes -->
         <footer>
