adds some additional styles to the blog body section in the article detail page

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -86,9 +86,15 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-8">
-				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
-				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium officiis ut sapiente reprehenderit enim soluta corrupti sint placeat. Odit voluptatibus dicta officia, dolores sed tempore sequi minus mollitia suscipit quisquam.</p>
-				<p style="background-color: teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium officiis ut sapiente reprehenderit enim soluta corrupti sint placeat. Odit voluptatibus dicta officia, dolores sed tempore sequi minus mollitia suscipit quisquam.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
+				<blockquote>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				</blockquote>
+				<img src="style-assets/media/newsroom-redesign/21920_jsmith01a.jpg" alt="blog body image">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
 			</div>
 			<div class="col-md-4">
 				<h3 style="background-color: orange;">I am the side bar</h3>
