adds document read to newsroom.js. udpates markup with new overlay class definition. updates class definition for overlay in newsroom-nav.scss. updates newsroom.html with script tag for newsroom.js

--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -29,7 +29,7 @@
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
-        <script>
+        <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
         $(document).ready(function() {
             $('#homepage-feature-caption').carousel({
                 wrap: false,
