--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -19,7 +19,7 @@
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div> -->
 <nav class="navbar navbar-default">
-  <div class="container-fluid newsroom-nav-container overlay">
+  <div class="container-fluid newsroom-nav-container news-overlay">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -210,7 +210,7 @@
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
-        <script>
+        <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
         $(document).ready(function() {
             $('#homepage-feature-caption').carousel({
                 wrap: false,
