adds additional js logic refinement to newsroom.js. adds compiled files

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <!-- <ul class="nav navbar-nav">
       </ul> -->
-      <ul class="nav navbar-nav navbar-left">
+      <ul id="nav-left" class="nav navbar-nav navbar-left">
         <h3 id="nav-h3">News from MSU Denver</h3>
         <li><a href="#" class="underline-link">Recent Stories</a></li>
         <li><a href="#" class="underline-link">All Stories</a></li>
