adds padding refinements to newsroom-hero element in newsroom.js for better display after scroll. updatea markup with ids to work with newsroom.js logic. adds compiled files.

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -63,7 +63,7 @@
 
 
         <!-- newsroom includes go here -->
-        <div class="homepage-hero">
+        <div id="newsroom-hero" class="homepage-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row hero-tab">
@@ -211,16 +211,7 @@
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
-        $(document).ready(function() {
-            $('#homepage-feature-caption').carousel({
-                wrap: false,
-                interval: 1500,
-                keyboard: true
-            });
-            $('#homepage-feature-caption').on('slide.bs.carousel', function() {
-                console.log('slid');
-            } );
-        });
+        
         </script>
 
             <!-- allow mobile menu dropdown to scroll -->
