--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -63,7 +63,7 @@
 
 
         <!-- newsroom includes go here -->
-        <div class="homepage-hero">
+        <div id="newsroom-hero" class="homepage-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row hero-tab">
