removed non essential sass files for vendor and added some custom styles

--- a/development/terminalfour/src/html/1column-vendor.html
+++ b/development/terminalfour/src/html/1column-vendor.html
@@ -13,7 +13,7 @@
     <body>
         @@include('vendor-includes/header-vendor.html')
 
-
+          @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
 
         @@include('vendor-includes/footer-vendor.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
