--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -14,12 +14,7 @@
         <!-- Global Header -->
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
-   <div class="navbar-fixed-top ">
-      <div class="" style="background-color:#00447c;" >
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-         <span class="sr-only">Toggle quick links navigation</span>
-         <span class="fa fa-bars"></span>
-         </button>
+   <div class="navbar-fixed-top">
          <div class="row container-fluid">
            <div class="col-xs-12 col-md-6">
               <h1>Site Name </h1>
@@ -30,97 +25,88 @@
               </a>
             </div>
          </div>
-      </div>
-      <nav class="navbar nav-header">
-         <!-- Brand and toggle get grouped for better mobile display -->
-
-      </nav>
    </div>
 </header>
 
 
+          <section class="admissionsHomepage admissionsHomepageResources">
+	<div class="container" style="padding-bottom: 10px;">
+		<div class="row">
+			<h2 class="fancy"><span>Resources</span></h2>
+		</div>
+	</div>
+
+	<div class="resources-container">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="#" >Academic Programs</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Visit Us</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Admissions Requirements</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Cost</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Meet an Admissions Counselor</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Residency</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Campus Life</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Request Information</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Admissions Forms</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Parents</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >High School / Community College Counselors</a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Contact Us</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</section>
 
 
         <!-- ** Site wide footer ** -->
 
     <footer>
     <!-- footer-bg-mob -->
-    <div class="footer-bg-mob">
-              <section class="footer-container"> 
-                  <hr class="footer-row-hr" />
-                  <div class="footer-menu-row">
-                     <div class="footer-campus-info visible-xs">
+              <section class="footer-container">
+                  <div class="container">
+                      <div class="col-xs-6 col-md-2">
+                          <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
+                      </div>
 
+                      <div class="col-xs-6 col-md-6">
                             <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                            <p><a href="javascript:void(0)">Denver, Colorado</a></p>
+                            <p><a href="javascript:void(0)">303-556-5740</a></p>
+                            <p><a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                      </div>
 
-
-                      </div><!-- .campus-info  -->
-                      <div class="footer-links">
-                          <div class="footer-links-row">
-                              <div class="footer-links-col ">
-                                <ul class="footer-nav list-unstyled">
-                                    <li><a href="javascript:void(0)" id="Footer-About">About</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-DegreePrograms">Degree Programs</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-Cost">Cost</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-FinancialAid">Financial Aid</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
-                                </ul>
-                              </div>
-                              <div class="footer-links-col">
-                                <ul class="footer-nav list-unstyled">
-                                    <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-Parking">Parking</a></li>
-                                    <li><a href="javascript:void(0)" id="Footer-Careers" target="_blank">Careers</a></li>
-                                    <li><a href="javascript:void(0)">Safety</a></li>
-                                </ul>
-                              </div>
-                              <div class="social-mobile footer-links visible-xs">
-                                  <ul class="list-unstyled footer-social">
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
-                                  </ul>
-                              </div>
-                          </div><!-- // .footer-links-row -->
-
-                      </div><!-- // .footer-links (col) -->
-
-                      <div class="footer-campus-info hidden-xs">
-
-                            <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
-                            <ul class="list-unstyled footer-social">
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
-                            </ul>
-
-                      </div><!-- .campus-info  -->
-
-                      <div class="footer-logo">
-                          <p><a href="javascript:void(0)">
-                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-                          </a></p>
+                      <div class="col-xs-6 col-md-4">
                           <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
-
-                      </div><!-- .footer-logo -->
+                      </div>
                   </div><!-- .row -->
 
 
               </section><!-- footer .container -->
-    </div>
+
     </footer>
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
