--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -15,7 +15,7 @@
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
    <div class="navbar-fixed-top">
-         <div class="row container-fluid">
+         <div class="container">
            <div class="col-xs-12 col-md-6">
               <h1>Site Name </h1>
            </div>
@@ -70,7 +70,7 @@
 					<a href="" >Parents</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >High School / Community College Counselors</a>
+					<a href="" >Academic Calendar</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
 					<a href="" >Contact Us</a>
@@ -92,15 +92,15 @@
                           <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
                       </div>
 
-                      <div class="col-xs-6 col-md-6">
+                      <div class="col-xs-6 col-md-5">
                             <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
                             <p><a href="javascript:void(0)">Denver, Colorado</a></p>
                             <p><a href="javascript:void(0)">303-556-5740</a></p>
                             <p><a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
                       </div>
 
-                      <div class="col-xs-6 col-md-4">
-                          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+                      <div class="col-xs-6 col-md-5">
+                          <p class="privacy-statement"><a href="https://msudenver.edu"><small>&copy; MSU Denver All Rights Reserved</small></a> | <a href="https://msudenver.edu/privacy"><small>Privacy Statement</small></a></p>
                       </div>
                   </div><!-- .row -->
 
