--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -492,7 +492,7 @@ $(window).scroll(function(){
 					<a href="" >Parents</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >High School / Community College Counselors</a>
+					<a href="" >Academic Calendar</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
 					<a href="" >Contact Us</a>
