--- a/development/terminalfour/src/html/1column-vendor.html
+++ b/development/terminalfour/src/html/1column-vendor.html
@@ -4,7 +4,6 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="initial-scale=1">
    <title>MSU Denver - Vendor Layout</title>
-  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
 
@@ -13,6 +12,7 @@
     <body>
         @@include('vendor-includes/header-vendor.html')
 
+          @@include('paragraph-styles.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
 
         @@include('vendor-includes/footer-vendor.html')
