--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -4,7 +4,6 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="initial-scale=1">
    <title>MSU Denver - Vendor Layout</title>
-  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
 
@@ -15,19 +14,30 @@
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
    <div class="navbar-fixed-top">
+         <div class="col-xs-12 col-md-6 col-md-push-6">
+           <a href="https://msudenver.edu">
+              <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
+           </a>
+         </div>
          <div class="container">
-           <div class="col-xs-12 col-md-6">
+           <div class="col-xs-12 col-md-6 col-md-pull-6">
               <h1>Site Name </h1>
            </div>
-            <div class="col-xs-12 col-md-6">
-              <a href="https://msudenver.edu">
-                 <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
-              </a>
-            </div>
+
          </div>
    </div>
 </header>
 
+
+          <div class="container">
+  <div class="col-xs-12">
+    <h1>This is a Header 1</h1>
+    <h2>This is a Header 2</h2>
+    <h3>This is a Header 3</h3>
+    <h4>This is a Header 4</h4>
+    <p>This is a pararaph</p>
+  </div>
+</div>
 
           <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
@@ -40,40 +50,40 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="#" >Academic Programs</a>
+					<a href="https://msudenver.edu/programs/" target="_blank">Academic Programs</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Visit Us</a>
+					<a href="https://msudenver.edu/visit/" target="_blank">Visit Us</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Admissions Requirements</a>
+					<a href="https://msudenver.edu/admissions/student-types/" target="_blank">Admissions Requirements</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Cost</a>
+					<a href="https://msudenver.edu/cost/" target="_blank">Cost</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Meet an Admissions Counselor</a>
+					<a href="https://msudenver.edu/admissions/counselor/" target="_blank">Meet an Admissions Counselor</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Residency</a>
+					<a href="https://msudenver.edu/admissions/residency/" target="_blank">Residency</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Campus Life</a>
+					<a href="https://msudenver.edu/campuslife/" target="_blank">Campus Life</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Request Information</a>
+					<a href="https://msudenver.edu/admissions/requestinfo/" target="_blank">Request Information</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Admissions Forms</a>
+					<a href="https://msudenver.edu/admissions/forms/" target="_blank">Admissions Forms</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Parents</a>
+					<a href="https://msudenver.edu/admissions/parents/" target="_blank">Parents</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Academic Calendar</a>
+					<a href="https://msudenver.edu/events/academic/" target="_blank">Academic Calendar</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >Contact Us</a>
+					<a href="https://msudenver.edu/admissions/contact/" target="_blank">Contact Us</a>
 				</div>
 			</div>
 		</div>
@@ -82,32 +92,24 @@
 </section>
 
 
-        <!-- ** Site wide footer ** -->
-
-    <footer>
-    <!-- footer-bg-mob -->
-              <section class="footer-container">
-                  <div class="container">
-                      <div class="col-xs-6 col-md-2">
-                          <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-                      </div>
-
-                      <div class="col-xs-6 col-md-5">
-                            <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
-                      </div>
-
-                      <div class="col-xs-6 col-md-5">
-                          <p class="privacy-statement"><a href="https://msudenver.edu"><small>&copy; MSU Denver All Rights Reserved</small></a> | <a href="https://msudenver.edu/privacy"><small>Privacy Statement</small></a></p>
-                      </div>
-                  </div><!-- .row -->
-
-
-              </section><!-- footer .container -->
-
-    </footer>
+        <footer>
+    <section class="footer-container">
+        <div class="container">
+            <div class="col-xs-4 col-md-2">
+                <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
+            </div>
+            <div class="col-xs-8 col-md-5">
+                  <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
+                  <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
+                  <p>303-556-5740</p>
+                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contac Us</a></p>
+            </div>
+            <div class="col-xs-12 col-md-5 privacy-statement">
+                <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a>  |  <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
+            </div>
+        </div>
+    </section>
+</footer>
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
