--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -18,7 +18,9 @@
         <!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div> -->
-<nav id="main-news-nav" class="navbar navbar-default">
+
+<!-- Desktop nav -->
+<nav id="main-news-nav" class="navbar navbar-default hidden-xs hidden-sm">
   <div id="newsroom-nav" class="container-fluid newsroom-nav-container news-overlay">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -41,9 +43,53 @@
         <h3 id="nav-h3">News from MSU Denver</h3>
         <li><a href="#" class="underline-link">Recent Stories</a></li>
         <li><a href="#" class="underline-link">All Stories</a></li>
-        <li><a href="#" class="underline-link">Trending Topics</a></li>
+        <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
       <form id="nav-right" class="navbar-form navbar-right">
+        <!-- <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button> -->
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Insider News">
+          <span class="input-group-btn">
+            <div class="form-group">
+              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
+            </div>
+          </span>
+        </div><!-- /input-group -->
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<!-- Mobile nav  -->
+<nav id="" class="navbar navbar-default visible-xs visible-sm">
+  <div id="" class="container-fluid newsroom-mobile-container news-overlay">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="#" class="navbar-brand">
+        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="30px">
+      </a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar-collapse-2">
+      <!-- <ul class="nav navbar-nav">
+      </ul> -->
+      <ul id="" class="nav navbar-nav navbar-left">
+        <li><a href="#" class="underline-link">Recent Stories</a></li>
+        <li><a href="#" class="underline-link">All Stories</a></li>
+        <li><a href="#" class="underline-link">Trending Topics</a></li>
+      </ul>
+      <form id="" class="navbar-form navbar-right">
         <!-- <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
