--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -23,7 +23,7 @@
 <nav id="main-news-nav" class="navbar navbar-default hidden-xs hidden-sm">
   <div id="newsroom-nav" class="container-fluid newsroom-nav-container news-overlay">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div id="nav-header" class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
