--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
 <body>
 
-
-
     <h2><a href="/web-builder/www-root/homepage.html"> Homepage layout </a></h2>
 
   	<h2><a href="/web-builder/www-root/admissions.html"> Admissions layout </a></h2>
 
   	<h2><a href="/web-builder/www-root/2column.html"> 2column layout </a></h2>
+
+		<h2><a href="/web-builder/www-root/1column-vendor.html"> 1column vendor layout </a></h2>
 
   	<h2><a href="/web-builder/www-root/president.html"> President layout </a></h2>
 
@@ -22,6 +22,8 @@
     <h2><a href="/web-builder/www-root/studenthubsecondary.html"> Student Hub inner layout </a></h2>
 
     <h2><a href="/web-builder/www-root/newsroom.html"> Newsroom </a></h2>
+
+		<h2><a href="/web-builder/www-root/newsroom-detail.html"> Newsroom Detail </a></h2>
 </body>
 
 
