adds source for test server of gotham font

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" /> <!-- test Gotham font -->
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
 <!--  <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
@@ -13,7 +14,7 @@
    <script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body style="padding-top: 0px;">
-        
+
         <!-- header includes -->
         <!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
@@ -128,7 +129,7 @@
 		</div>
 	</div>
 </div>
-        <section class="newsroom-article-detail">	
+        <section class="newsroom-article-detail">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-8">
