adds searchbar refinements. adds compiled files

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -52,7 +52,7 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button> -->
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Insider News">
+          <input type="text" class="form-control" placeholder="Search Red">
           <span class="input-group-btn">
             <div class="form-group">
               <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
