--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" /> <!-- test Gotham font -->
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
 <!--  <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
@@ -13,7 +14,7 @@
    <script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body style="padding-top: 0px;">
-        
+
         <!-- header includes -->
         <!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
@@ -51,7 +52,7 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button> -->
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Insider News">
+          <input type="text" class="form-control" placeholder="Search Red">
           <span class="input-group-btn">
             <div class="form-group">
               <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
@@ -279,7 +280,7 @@
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
-        
+
         </script>
 
             <!-- allow mobile menu dropdown to scroll -->
