adds style refinments to newsroom footer. replaces footer svg image with new specified informal logo image. adds compiled files

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -223,8 +223,8 @@
 						<li style="border-bottom: none;"><a href="">Contact Us</a></li>
 					</ul>
 				</div>
-				<div class="col-md-4">
-					<img src="style-assets/media/newsroom-redesign/msu-denver-logo.svg" alt="">
+				<div class="col-md-4 text-center">
+					<img src="style-assets/media/newsroom-redesign/msu-denver-informal-footer-logo.svg" alt="">
 					<div class="row icon-links">
 						<div class="col-xs-2">
 							<a href=""><span class="fa fa-facebook-f fa-2x"></span></a>
