--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -67,7 +67,7 @@
 
 <!-- Mobile nav  -->
 <nav id="" class="navbar navbar-default visible-xs visible-sm">
-  <div id="" class="container-fluid newsroom-mobile-container news-overlay">
+  <div id="" class="container-fluid newsroom-mobile-container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2" aria-expanded="false">
@@ -76,13 +76,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- second collapse button -->
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-search" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="fa fa-search fa-1x" style="color: white;"></span>
-      </button>
       <a href="#" class="navbar-brand">
-        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="30px">
+        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
       </a>
     </div>
 
@@ -93,15 +88,15 @@
       <ul id="" class="nav navbar-nav navbar-left">
         <li><a href="#" class="underline-link">Recent Stories</a></li>
         <li><a href="#" class="underline-link">All Stories</a></li>
-        <li><a href="#" class="underline-link">Trending Topics</a></li>
+        <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
-      <form id="" class="navbar-form navbar-right hidden-xs">
+      <form id="" class="navbar-form navbar-right">
         <!-- <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button> -->
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Insider News">
+          <input type="text" class="form-control" placeholder="Search Red">
           <span class="input-group-btn">
             <div class="form-group">
               <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
@@ -110,23 +105,7 @@
         </div><!-- /input-group -->
       </form>
     </div><!-- /.navbar-collapse -->
-    <!-- second collapse container  -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-search">
-      <form id="" class="navbar-form navbar-right">
-        <!-- <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button> -->
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Insider News">
-          <span class="input-group-btn">
-            <div class="form-group">
-              <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
-            </div>
-          </span>
-        </div><!-- /input-group -->
-      </form>
-    </div>
+    
   </div><!-- /.container-fluid -->
 </nav>
 
