--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -15,8 +15,8 @@
 
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" /> <!-- test Gotham font -->
-  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
   <!-- <link rel="stylesheet" href="<t4 type="media" formatter="path/*" id="146559" />" /> -->
   <script src="style-assets/lib/jquery/jquery.min.js"></script>
@@ -27,54 +27,10 @@
 </style> -->
 
 </head>
-    <body style="padding-top: 0px;">
 
-        <!-- <div class="top-banner">
-  <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
-</div> -->
-
-<!-- Desktop nav -->
-<nav id="main-news-nav" class="navbar navbar-default hidden-xs hidden-sm">
-  <div id="newsroom-nav" class="container-fluid newsroom-nav-container news-overlay">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div id="nav-header" class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">
-        <img id="newsroom-logo" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
-      </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav">
-      </ul> -->
-      <ul id="nav-left" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
-        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
-      </ul>
-      <form id="nav-right" class="navbar-form navbar-right">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Red">
-          <span class="input-group-btn">
-            <div class="form-group">
-              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
-            </div>
-          </span>
-        </div><!-- /input-group -->
-      </form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-
-<!-- Mobile nav  -->
-<nav id="" class="navbar navbar-default visible-xs visible-sm">
+        
+<!-- Navigation  -->
+<nav id="" class="navbar navbar-default navbar-fixed-top">
   <div id="" class="container-fluid newsroom-mobile-container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -85,15 +41,19 @@
         <span class="icon-bar"></span>
       </button>
       <a href="#" class="navbar-brand">
-        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
+        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" style="float:left">
+        <!-- <img id="" src="<t4 type="media" formatter="path/*" id="149184" />" alt="RED Logo" style="float:left"> -->
+        <!-- <bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver. -->
       </a>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul id="" class="nav navbar-nav navbar-left">
-        <li><a href="#" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
+        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
+        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
+        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
       </ul>
       <form id="" class="navbar-form navbar-right">
         <div class="input-group">
@@ -113,7 +73,7 @@
 
         <!-- newsroom includes go here -->
         <div id="newsroom-hero" class="news-hero">
-	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
+	<img src="style-assets/media/newsroom-redesign/story-3-compressor.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-lg-8 col-lg-offset-2 hero-tab text-center">
