--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -29,7 +29,7 @@
         
 <!-- Navigation  -->
 <nav id="" class="navbar navbar-default navbar-fixed-top">
-  <div id="" class="container-fluid newsroom-mobile-container">
+  <div id="" class="container-fluid newsroom-navbar">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2" aria-expanded="false">
@@ -231,14 +231,13 @@
     	$(window).scroll(function(){
     		var position = $(window).scrollTop();
     		var width     =  $(window).width();
-    		$(".magazine-logo").removeClass("magazine-logo-change");
-    		$(".navbar-collapse").removeClass("navbar-collapse-change");
-    		$(".msudenver-logo").removeClass("msudenver-logo-change");
+        $(".newsroom-navbar").removeClass("newsroom-navbar-change");
+        $(".navbar-brand").removeClass("navbar-brand-change");
+
 
     		if( position > 15 && width > width_threshold) {
-    			$(".navbar-collapse").toggleClass("navbar-collapse-change");
-    			$(".magazine-logo").toggleClass("magazine-logo-change");
-    			$(".msudenver-logo").toggleClass("msudenver-logo-change");
+    			$(".newsroom-navbar").toggleClass("newsroom-navbar-change");
+    			$(".navbar-brand").toggleClass("navbar-brand-change");
     		}
 
     	});
