adds Google CSE to search form

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -73,20 +73,23 @@
             <li><a href="/science-and-technology">Science and technology</a></li>
           </ul>
         </li>
-
       </ul>
-      <form id="" class="navbar-form navbar-right">
+
+      <form id="" class="navbar-form navbar-right" action="//red.msudenver.edu/search/">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Red">
+          <input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
+          <input type="hidden" name="cof" value="FORID:11" />
+          <input type="hidden" name="ie" value="UTF-8" />
+          <input type="text" name="q" class="form-control" placeholder="Search Red" />
           <span class="input-group-btn">
             <div class="form-group">
-              <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
+              <button class="btn btn-default" type="action"><span class="fa fa-search"></span></button>
             </div>
           </span>
         </div><!-- /input-group -->
       </form>
-    </div><!-- /.navbar-collapse -->
 
+    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
