updates for launch
Adds glyphicon descriptions, new call to action element and corresponding styles.

--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -6,6 +6,8 @@
         <!-- newsroom includes go here -->
         @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
         @@include('newsroomHomepageIncludes/newsroomArticles.html')
+        @@include('newsroomHomepageIncludes/calls-to-action.html')
+
 
         <!-- Terminal Four Footer starts -->
         @@include('newsroomHomepageIncludes/newsroomFooter.html')
