fixes hero stying and body padding, plus footer links

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -99,7 +99,7 @@
 	<img src="style-assets/media/newsroom-redesign/story-3-compressor.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-lg-8 col-lg-offset-2 hero-tab text-center">
+			<div class="col-md-12 col-lg-10 col-lg-offset-1 hero-tab text-center">
 				<h1>Overcoming Bullies</h1>
 				<h2>Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.</hh2>
 			</div>
@@ -107,8 +107,8 @@
 	</div>
 </div>
 
-        <section class="newsroom-article-detail">	
-	<div class="container-fluid">
+        <section class="newsroom-article-detail">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
@@ -124,6 +124,7 @@
 			<div class="col-md-4 newsroom-sidebar">
 				<div class="sidebar-profiles" id="experts">
 					<h3 class="text-center">Our Experts</h3>
+					<a href="#">
 					<div class="row sidebar-profile">
 						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
@@ -131,9 +132,10 @@
 						<div class="col-xs-9">
 							<h4>Expert Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
-							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
+							<p>Department of Chemistry</p>
 						</div>
 					</div>
+				</a>
 					<div class="row sidebar-profile">
 						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
@@ -189,6 +191,7 @@
 </section>
 
 
+
         <!-- footer includes -->
         <footer>
 	<div class="footer-body">
@@ -199,8 +202,8 @@
 					<ul>
 						<li><a href="" class="">Subscribe</a></li>
 						<li><a href="mailto:red@msudenver.edu" class="">Submit a story</a></li>
-						<li><a href="mailto:red@msudenver.edumailto:red@msudenver.edu" class="">Send us feedback</a></li>
-						<li style="border-bottom: none;"><a href="mailto:red@msudenver.edu">Contact Us</a></li>
+						<li><a href="mailto:red@msudenver.edu" class="">Send us feedback</a></li>
+						<li style="border-bottom: none;"><a href="/about">About Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -223,7 +226,7 @@
 						</div>
 						<div class="col-xs-2">
 							<a alt="Facebook MSU Denver site" href="https://www.facebook.com/msudenver" target="_blank" aria-label="Facebook Icon"><span role="presentation" class="fa fa-facebook-f fa-2x"></span></a>
-						</div>			
+						</div>
 						<div class="col-xs-2">
 							<a alt="Instagram MSU Denver site" href="https://instagram.com/msu_denver" target="_blank" aria-label="Instagram Icon"><span role="presentation" class="fa fa-instagram fa-2x"></span></a>
 						</div>
@@ -266,8 +269,13 @@
 
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
+        <!-- <t4 type="media" id="117951"/> -->
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+        <!-- <t4 type="media" id="117952"/> -->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+        <!-- <t4 type="media" id="117953"/> -->
+        <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
+        <!-- <t4 type="media" id="148794"/> -->
 
     </body>
 
