adds subcribe alert

--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -110,7 +110,7 @@
         <section class="newsroom-article-detail">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-xs-12 col-md-8 story">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium officiis ut sapiente reprehenderit enim soluta corrupti sint placeat. Odit voluptatibus dicta officia, dolores sed tempore sequi minus mollitia suscipit quisquam.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ut repellendus laudantium aspernatur ipsam, quae optio saepe vitae tempora velit neque vero consectetur ducimus voluptatem, ex corporis dignissimos hic impedit.</p>
