comments out admissions footer

--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -39,7 +39,7 @@
   </div>
 </div>
 
-          <section class="admissionsHomepage admissionsHomepageResources">
+          <!-- <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
 		<div class="row">
 			<h2 class="fancy"><span>Resources</span></h2>
@@ -90,7 +90,7 @@
 	</div>
 
 </section>
-
+ -->
 
         <footer>
     <section class="footer-container">
