--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <h2><a href="/web-builder/www-root/newsroom.html"> Newsroom </a></h2>
 
 		<h2><a href="/web-builder/www-root/newsroom-detail.html"> Newsroom Detail </a></h2>
+
+		<h2><a href="/web-builder/www-root/viewbook.html"> Viewbook </a></h2>
 </body>
 
 
