--- a/www-root/index.html
+++ b/www-root/index.html
@@ -16,7 +16,7 @@
 	<h2><a href="/newsroom.html"> Newsroom Layout </a></h2>
 	<h2><a href="/newsroom-detail.html"> Newsroom Detail </a></h2>
 	<h2><a href="/1column-vendor.html"> 1 Column  Vendor </a></h2>
-
+	<h2><a href="/viewbook.html"> Viewbook </a></h2>
 </body>
 
 
